--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pull Request First Trial</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Welcome to my home page</h1>
     <p>Edited by harsh patel</p>
     <h1>Hello i am mann bhalodiya</h1>
     <p>Edit my harsh</p>
